--- a/14. TypeScript.md
+++ b/14. TypeScript.md
@@ -233,8 +233,78 @@ const flowerLatinName = (flower: Flower) => {
 
 ## 7. 제네릭과 제네릭의 유틸리티 타입
 
+### Generics
+
+- 선언 시점이 아닌 생성 시점에 타입을 명시할 수 있게 해주는 기능
+- 제네릭 타입으로 선언하면, **하나의 선언 코드로 다양한 타입을 사용 가능** ⇒ **재사용성** ⬆️
+- 꺽쇠(`<>`) 안에 타입을 명시 & 타입명은 관용적으로 `T`, `K`, `D` 등을 사용
+- **`any`와 비교** | | any | 제네릭 | | --- | --- | --- | | 타입 수용성 | 모든 타입을 감싸는 하나의 타입 | 어떤 타입으로든 변할 수 있는(메타몽같은) 타입 매개변수 | | 타입 보장성 | 특정 타입에 대해서만 쓰여도, 해당 타입임을 보장할 수 없음 | 바인딩된 타입의 정보를 유지하여, 항상 해당 타입임을 보장함 |
+
+  ```tsx
+  function echoAny(arg: any) {
+    return arg;
+  }
+
+  function echoGen<T>(arg: T) {
+    return arg;
+  }
+
+  const resultAny = echoAny('message'); // const resultAny: any
+  const resultGen = echoGen('message'); // const resultGen: "message"
+  ```
+
+### [유틸리티 타입](https://www.typescriptlang.org/ko/docs/handbook/utility-types.html)
+
+- `Partial<Type>`: `Type`의 모든 프로퍼티를 **선택적**으로 하는 타입 (=부분집합)
+- `Required<Type>`: `Type`의 모든 프로퍼티를 **필수**로 하는 타입
+- `ReadOnly<Type>`: `Type`의 모든 프로퍼티를 **읽기 전용**으로 하는 타입
+- `Record<Keys, Type>`: 키(`Key`)-밸류(`Type`)로 맵핑하는 타입
+- `Pick<Type, Keys>`: `Type`에서 특정 `Key`를 선택한 타입
+- `Omit<Type, Keys>`: `Type`에서 특정 `Key`를 제거한 타입
+- `Exclude<Type, ExcludedUnion>`: `Type`에서 특정 타입 집합을 제거한 타입 (=차집합)
+  - `Omit`은 `키`를 선택해 제거하는 반면, `Exclude`는 타입 집합을 제거함
+- `Extract<Type, Union>`: `Type`에서 특정 타입 집합에 속하는 타입만 추출한 타입 (=교집합)
+- `NonNullable<Type>`: `Type`에서 `null`, `undefined`를 제거한 타입
+
 ## 8. 유니온 타입과 인터섹션 타입에 대해 각각 한 문장으로 설명해주세요.
 
+- 유니온 타입
+  - 타입 집합 간 합집합
+  - 타입과 타입 사이에 `|`로 나타냄
+  ```tsx
+  type OddNumber = 1 | 3 | 5 | 7 | 9;
+  type WindowStates = 'open' | 'closed' | 'minimized' | string;
+  // WindowsStates의 타입은 유니온 타입이 아닌 string 타입임
+  ```
+- 인터섹션 타입
+  - 타입 집합 간 교집합
+  - 타입과 타입 사이에 `&`로 나타냄
+
 ## 9. '타입 좁히기'를 예시를 들어 설명해주세요.
+
+- 타입 좁히기/넓히기
+  - 타입이 나타낼 수 있는 `가능성`을 줄이거나 확장하는 것
+  - 다른 타입일 가능성을 제거하거나 `typeof`, `instanceof`, `in` 등의 타입 가드를 통해 타입을 좁힐 수 있음
+  - 타입을 좁혀 특정 타입임을 보장할 수 있음
+  ```tsx
+  const neverChange = 'Hi'; // const neverChange: 'Hi'
+  let canBeChange = 'Hi'; // let canBeChange: string
+
+  type Person = {
+    name: string;
+    age: number;
+  };
+
+  function func(arg: string | Date | Person | undefined) {
+    // arg.length // error occurs
+
+    if (arg === undefined) return;
+    // now, it is ensured that arg is not undefined
+
+    if (typeof arg === 'string') arg.length; // type is string in here
+    else if (arg instanceof Date) arg.getDay();
+    else if ('age' in arg) arg.name; // 'key' in 'variable'
+  }
+  ```
 
 ## 10. namespace
