--- a/10. Network.md
+++ b/10. Network.md
@@ -1,6 +1,82 @@
 ## 1. 프로토콜 - HTTP
 
+**프로토콜**
+
+서로 다른 시스템이나 기기간 데이터 교환을 원활하게 하기 위한 표준화 된 통신 규약
+
+[**HTTP/HTTPS(Hyper Text Transfer Protocol SSL)**](https://velog.io/@reggias/%EA%B8%B0%EC%88%A0%EB%A9%B4%EC%A0%91HTTP-HTTPS)
+
+- HTTP : 웹에서 데이터를 주고 받기 위한 프로토콜
+- HTTPS : HTTP에 SSL 프로토콜을 추가해 데이터를 암호화 하는 프로토콜
+
+[**HTTP 버전별 특징**](https://zu-techlog.tistory.com/113)
+
+- HTTP 1.0 : 하나의 연결당 하나의 요청 처리
+- HTTP 1.1 : keep-alive 옵션을 추가해 하나의 연결당 여러번의 송수신 가능
+- HTTP 2 : 여러 리소스를 한번에 요청 가능
+- HTTP 3 : UDP 기반의 프로토콜로 사용
+
+**HTTP Status Code**
+
+클라이언트가 보낸 특정 HTTP 요청에 대한 서버의 응답 코드 상태 코드에 따라 요청의 성공이나 실패 여부 판단
+
+- **1xx(정보제공) :** 클라이언트의 요청을 받았으며 프로세스를 계속 진행함
+- **2xx(성공) :** 클라이언트가 요청한 동작을 수신/이해/승낙하여 성공적으로 처리함
+  - 200 : 요청을 성공적으로 처리함
+  - 201 : 요청이 처리되어서 새로운 리소스 생성
+  - 202 : 요청은 접수했지만, 처리가 완료되지 않음
+- **3xx(리다이렉션) :** 클라이언트는 요청 완료를 위해 추가 작업을 해야함
+  - 301 : 지정할 리소스가 새로운 URI로 이동함
+  - 303 : 다른 위치로 요청
+  - 307 : 임시 리다이렉션 필요
+- **4xx(클라이언트 에러) :** 클라이언트 요청에 오류가 있음
+  - 400 : 요청 구문 에러
+  - 401 : 지정한 리소스에 대한 액세스 권한 X
+  - 403 : 지정한 리소스에 대한 엑세스 금지
+  - 404 : 지정한 리소스를 찾을 수 없음
+- **5xx(서버 에러) :** 클라이언트의 요청은 유효하나 서버가 처리 실패함
+  - 500 : 서버 내부 에러 발생
+  - 501 : 요청한 URI의 메소드에 대해 서버가 구현하고 있지 않음
+  - 502 : 게이트웨이 또는 프록시 역할을 하는 서버가 그 뒷단의 서버로부터 잘못된 응답을 받았다.
+
+**HTTP 헤더 / HTTTP 페이로드**
+
+- 헤더(Header) : HTTP 요청이나 응답에 대한 메타 데이터
+- 페이로드(Payload) : 실제 데이터
+
+<br/ >
+
 ## 2. RESTful API
+
+**API(Application Programming Interface )**
+
+응용 프로그램에서 데이터를 주고 받기 위한 인터페이스로 어떠한 사이트에서 데이터를 공유할 경우 어떤 방식으로 정보를 요청해야 되는지, 어떠한 형태로 데이터를 제공받게 되는지에 대한 규격
+
+**REST(Representational State Transfer)**
+
+자원을 이름으로 구분하여 자원의 상태(정보)를 주고 받는 것
+
+**REST의 구성요소**
+
+- **자원(RESOURCE)** : HTTP URI
+- **행위(Verb)** : HTTP METHOD
+  - **GET** : 조회
+  - **POST** : 리소스 생성
+  - **PUT** : 리소스 전체 교체
+  - **PATCH** : 리소스의 일부 수정
+  - **DELETE** : 리소스 삭제
+- **표현(Representations)** : HTTP Message Pay Load
+
+**REST API(Representational State Transfer)**
+
+- REST 아키텍쳐를 따르는 API
+
+**RESTful API 설계 가이드**
+
+1. URI 는 정보의 자원을 표현해야 한다.
+2. 자원에 대한 행위는 HTTP Method로 표현한다.
+
+<br />
 
 ## 3. 프록시(Proxy)란?
 
