[ Network ] : 20회차 스터디 1차 답변

--- a/10. Network.md
+++ b/10. Network.md
@@ -80,4 +80,53 @@
 
 ## 3. 프록시(Proxy)란?
 
+**프록시/프록시서버**
+
+서버와 클라이언트 사이에서 대리로 통신을 수행해 주는 것으로 중계 역할을 해주는 서버를 프록시 서버라고 한다.
+
+**포워드 프록시**
+
+- 클라이언트의 요청을 받아 서버에 전달해주는 프록시
+- 캐싱된 데이터가 존재한다면 중간에서 빠르게 클라이언트에게 응답 해줌
+
+**리버스 프록시**
+
+- 클라이언트에게 받은 요청을 보고 알맞은 서버에게 요청을 처리하고록 데이터를 넘겨주는 프록시
+
+<br />
+
 ## 4. DNS
+
+**IP 주소**
+
+네트워크 상에서 인터넷에 연결된 컴퓨터들이서로를 인식하기 위해 지정받은 식별용 번호
+
+**도메인(Domain)**
+
+IP 주소를 식별하는 문자열
+
+**DNS(Domain Name Server)**
+
+도메인과 IP 주소를 한 쌍으로 저장하고 있는 서버
+
+**URI/URL/URN**
+
+![alt text](/img/image.png)
+
+- URI : 인터넷 자원을 식별할 수 있는 문자열
+- URL : 리소스를 어떻게 얻을것이고 어디에서 가져와야 하는지 명시하는 URI
+- URN : 리소스 경로
+
+[**주소창에 URL을 검색했을 때 일어나는 일?**](https://github.com/FEDeepDive/Front-end/blob/devkyoung2/9.%20WebBrowser.md)
+
+1. 사용자가 브라우저에 URL(www.naver.com)을 입력한다.
+2. 입력한 URL 주소 중, 도메인 이름에 해당하는 naver.com가 캐싱 되어있나 확인
+
+   1-1. 도메인 이름에 맞는 IP 주소가 존재하면 바로 IP 주소를 반환
+
+   1-2. 도메인 이름에 맞는 IP 주소가 존재하지 않는다면 DNS 서버에 IP 주소 요청
+
+3. 브라우저가 서버와 TCP 연결을 진행
+4. 전달받은 IP 주소를 이용해 웹 브라우저는 웹 서버에게 해당 웹 사이트에 맞는 HTML 문서 요청(HTTP 프로토콜 사용)
+
+   2-1. 이때, 웹서버는 정적인 데이터를 클라이언트로 바로 돌려줄 수 있으나, 동적인 데이터는 was로 요청함
