--- a/9. WebBrowser.md
+++ b/9. WebBrowser.md
@@ -243,26 +243,25 @@
 
 ## 8. 쿠키/세션/토큰
 
-### **쿠키의 등장 배경과 HTTP의 특징**
+### **HTTP의 특징과 쿠키 등장 배경**
 
-- **`HTTP`** 란 웹에서 데이터를 주고받기 위한 프로토콜인데 이 **`HTTP`** 는 비연결성, 무상태성이라는 특징을 가지고 있다.
-- 비연결성(**`Connectionless`**) : 클라이언트가 서버에게 요청을 보내고 서버가 응답하면 접속을 종료한다.
-- 무상태성(**`Stateless`**) : 통신이 끝나면 상태 정보를 유지하지 않는다.
+- `HTTP`란 웹에서 데이터를 주고받기 위한 프로토콜인데 이 `HTTP`는 비연결성, 무상태성이라는 특징을 가지고 있다.
+  - 비연결성(`Connectionless`) : 클라이언트가 서버에게 요청을 보내고 서버가 응답하면 접속을 종료한다.
+  - 무상태성(`Stateless`) : 통신이 끝나면 상태 정보를 유지하지 않는다.
 - 즉 서버가 클라이언트의 정보를 계속 가지고 있지 않기 때문에 페이지 이동을 할 때마다 사용자의 로그인 정보나 사용자가 입력한 값이 초기화 되는 문제가 있다.
 - 따라서 이를 해결하기 위해 데이터를 브라우저에 저장할 수 있는 쿠키가 만들어졌다.
-- 서버는 쿠키, 세션, 토큰 세가지 방식으로 클라이언트의 상태를 기억하고 식별/인증한다.
+- 클라이언트는 서버에서 쿠키, 세션, 토큰 세가지 방식으로 추가 정보를 포함시켜 전달할 수 있고 서버는 클라이언트의 상태를 기억하고 식별/인증한다.
 
 ### **쿠키(Cookie)**
 
-서버가 사용자의 웹 브라우저에 전송하는 작은 데이터 조각으로 Key - Value 형식의 문자열 형태이며 브라우저에 저장된다.
+서버가 사용자의 웹 브라우저에 전송하는 작은 데이터 조각으로 `Key - Value` 형식의 문자열 형태이며 브라우저에 저장된다.
 
-**쿠키 인증 방식**
+**쿠키의 동작 방식**
 
-1. 최초 통신(처음접속)에는 쿠키 값이 없으므로 클라이언트(브라우저)가 서버에 접속할 떄 요청을 보낸다.
-2. 서버는 클라이언트(브라우저)의 요청 헤더에 쿠키가 없음을 판별하고, 통신 상태(UserID, PW, 조작상태, 방문횟수 등)를 저장한 쿠키를 응답헤더의 Set-Cookie에 담아 응답한다.
-3. 클라이언트인 브라우저는 받은 쿠키를 생성/보존한다.
-4. 두번째 연결부터 클라이언트는 요청을 보낼 때마다 HTTP Header에 쿠키를 실어보낸다.
-5. 서버는 쿠키에 담긴 정보를 바탕으로 클라이언트를 식별한다.
+1. 클라이언트에서 서버에게 쿠키를 필요로 하는 API를 처음으로 요청할 때, 클라이언트는 쿠키 값이 없으므로 통신 상태(UserID, PW, 조작상태, 방문횟수 등)를 저장한 쿠키를 응답헤더의 `Set-Cookie`에 담아 응답한다.
+2. 클라이언트인 브라우저는 받은 쿠키를 파싱하고 저장소에 저장한다. 이 과정은 브라우저가 해주고 우리는 그에 맞게 세팅을 할 수 있다.(`HttpOnly`, `Secure`, `SameSite`)
+3. 두번째 요청부터는 클라이언트에서 요청을 보낼 때마다 HTTP Header에 쿠키를 실어보낸다.
+4. 서버는 쿠키에 담긴 정보를 바탕으로 클라이언트를 식별한다.
 
 **쿠키의 종류(파기시점에 따라 두개로 나뉘어짐)**
 
@@ -272,20 +271,23 @@
 **쿠키의 특징**
 
 - 쿠키의 값을 그대로 보내기에 보안에 취약하며 유출 및 조작 당할 위험이 존재한다.
-- 웹 브라우저마다 쿠키게 대한 지원 형태가 달라 브라우저간 공유가 불가능하다.
+- 웹 브라우저마다 쿠키에 대한 지원 형태가 달라 브라우저간 공유가 불가능하다.
+- 쿠키의 사이즈가 커질수록 네트워크 부하가 발생한다.
 
 **쿠키 사용 예시**
 
+- 아이디 자동완성
+- 로그인 안한상태로 장바구니 담기
 - 팝업 보지 않기
 - 사용자의 이용 스크롤링이나 뷰 설정 값
 
 ### **세션(Session)**
 
-쿠키의 보안적 이슈를 해결하기 위해서 만들어진 방법으로 클라이언트의 민감한 인증 정보를 서버측에 저장하고 관리하는 방법
+쿠키의 보안적 이슈를 해결하기 위해서 만들어진 방법으로 클라이언트의 민감한 인증 정보를 서버측에 저장하고 관리하는 방법. 전통적인 방법이지만, 최근에는 JWT 토큰을 사용하여 인증하는 방식이 더 많이 사용된다.
 
-**세션 인증 방법**
+**세션의 동작 방식**
 
-1. 클라이언트가 서버에 접속할 때 서버로부터 세션ID를 발급받는다.
+1. 클라이언트에서 서버에게 세션을 필요로 하는 API를 처음으로 요청할 때, 서버는 세선ID를 발급하여 쿠키에 담아 클라이언트로 전달한다.
 2. 클라이언트는 서버가 발급해준 세션 ID를 쿠키를 이용해 저장한다.
 3. 따라서 클라이언트는 서버에 요청을 할 때마다 세션 ID를 함께 전달하게 되고 서버는 쿠키에 담긴 세션 ID를 토대로 클라이언트를 식별한다.
 
@@ -301,38 +303,67 @@
 
 ### **토큰(Token)**
 
-서버에 접속암호화 된 접근 권한
+인증된 사용자의 신원과 권한을 나타내는 암호화된 문자열로 JWT, SWT등의 토큰이 존재한다.
 
-**토큰 인증 방법**
+**토큰의 동작 방식**
 
-1. 사용자(클라이언트)가 로그인을 한다.
-2. 서버 측에서 사용자(클라이언트)에게 유일한 Access Token을 발급한다.
-3. 클라이언트는 서버 측에서 전달받은 토큰을 쿠키나 스토리지에 저장해 두고, 서버에 요청을 할 때마다 해당 토큰을 HTTP 요청 헤더에 포함시켜 전달한다.
-4. 서버는 전달받은 토큰을 검증하고 사용자에 맞는 데이터를 응답한다.
+1. 사용자가 인증이 필요한 작업(로그인, 권한부여 등)을 수행할 때, 클라이언트는 서버에 인증 요청을 보낸다.
+2. 서버 측에서 클라이언트의 신원을 확인하고(로그인 정보 유무 확인 및 권한 확인 등) 인증이 성공하면, 클라이언트에게 유일한 `Access Token`을 발급한다. 추가적으로 더 높은 보안을 위해 `Refresh Token`을 함께 발급하기도 한다.
+3. 클라이언트는 발급된 토큰을 스토리지에 저장해 두고, 서버에 요청을 할 때마다 해당 토큰을 HTTP 요청 헤더에 포함시켜 전달한다.
+4. 서버는 클라이언트에게 전달받은 토큰을 검증(변조되지 않았는지, 유효한지 등)하고 사용자에 맞는 데이터를 응답한다.
 
-**토큰의 특징**
+**토큰 사용 예시**
 
-- 세션/쿠키는 별도의 저장소 관리가 필요하지만, JWT는 발급한 후 검증만 하면되기 때문에 추가 저장소가 필요하지 않다.
-- 이미 발급된 JWT에 대해서는 유효기간이 만료전까지 계속 사용이 가능하므로 토큰을 탈취당하면 대처가 어려워짐(access token 의 유효기간을 짧게 하고 refresh token을 새로 발급받아 해결)
-- 토큰 자체의 길이가 길이가 길기 때문에 인증이 필요한 요청이 많을수록 서버의 자원낭비가 발생한다.
+- 인증, 권한부여, API 접근 제어, CSRF방지, 통합인증
 
 **JWT 토큰(Json Web Token)**
 
-인증에 필요한 정보들을 암호화 시킨 JSON 형태의 토큰
-
-**JWT 구조**
-
-.을 구분자로 나누어지는 세가지 문자열의 조합으로 **.** 을 기준으로 Header, Payload, Signature을 의미한다.
-
 ![alt text](img/jwt.png)
+.을 구분자로 나누어지는 세가지 문자열의 조합이며, . 을 기준으로 Header, Payload, Signature을 의미한다.
 
 - Header : 토큰의 타입이나 서명생성에 사용된 알고리즘(해시알고리즘)
 - Payload : 토큰에서 사용할 정보의 조각들로 해독이 가능하기 때문에 중요한 정보는 포함하면 안됨
 - Signature : Header, Payload를 디코딩하고 합쳐서 개인키로 암호화된 전자서명
 
+**JWT의 특징**
+
+- 세션/쿠키는 사용자에 대한 정보를 서버내부의 저장소에서 관리하지만, JWT토큰에는 사용자에 대한 정보가 들어있기 때문에, 서버에서 검증만 해주면 된다.
+- 토큰 자체의 길이가 길이가 길기 때문에 인증이 필요한 요청이 많을수록 서버의 자원낭비가 발생한다.
+- 이미 발급된 JWT에 대해서는 유효기간이 만료전까지 계속 사용이 가능하므로 토큰을 탈취당하면 대처가 어려워짐(`access token`의 유효기간을 짧게 하고 `refresh token`을 새로 발급받아 해결)
+- 만약 글을 쓰는 도주에 유효기간이 만료된다면 작성된 글이 날아가기 때문에 글을 시작하기전 혹은 결제 전에 `Sliding Session`이라는 서비스를 이용해 새로운 토큰을 발급해 줄 수 있다.
+
+### Oauth
+
+사용자들이 비밀번호를 노출하지 않고 구글이나 네이버 등 다른 애플리케이션에 권한을 위임하여 자원에 접근할 수 있도록 하는 프로토콜. 인가과정에서 인증을 따로 분리하기 위한 기술이다.
+
+**OAuth 참여자**
+
+- `Resource Owner`
+  - **인증**을 수행하는 주체
+  - 자원을 제공하는 유저
+- `Client`
+  - **권한**을 위임받는 주체
+  - `Resoure Server`에 접속해서 정보를 가져오고자 하는 클라이언트(웹 어플리케이션)
+- `Resource Server`
+  - **인가**를 수행하고, **리소스**를 제공하는 주체
+  - Client가 제어하고자 하는 자원을 보유하고 있는 서버.
+- `Authorization Server`
+  - **인증**을 검증하고, **권한**을 부여하는 주체
+  - Client가 제어하고자 하는 자원을 보유하고 있는 서버
+
+**OAuth 세팅**
+
+- 클라이언트 ID : 서비스의 식별자
+- 클라이언트 PW : 서비스의 비밀번호
+- 리디렉션 URI : `Authorization Server`에서 다시 돌려줄 서비스 페이지
+- 서비스에 필요하다고 생각하는 권한 체크
+
+**OAuth Flow**
+![alt text](img/image.png)
+
 ### **브라우저 저장소란?**
 
-서버가 아닌 클라이언트 내에서 데이터를 저장할 수 있도록 하는 저장소로 쿠키와 웹 스트리지로 이루어져 있다.
+서버가 아닌 클라이언트 내에서 데이터를 저장할 수 있도록 하는 저장소로 쿠키와 웹 스트리지로 이루어져 있다. HTTP에 포함되지 않기때문에 네트워크 부하가 없다.
 
 **웹 스토리지(Web Storage)**
 
@@ -345,27 +376,26 @@
 
 - 브라우저를 종료해도 데이터를 영구적으로 보관
 - 명시적으로 삭제해주지 않으면 로컬 스토리지의 데이터는 영구적
-- **`windows`** 전역 객체의 **`LocalStorage`** 컬렉션을 통해 저장 및 조회를 할 수 있음
+- `windows` 전역 객체의 `LocalStorage`컬렉션을 통해 저장 및 조회를 할 수 있음
 - 도메인마다 같으면 모든 브라우저 간에 전역적으로 데이터가 공유됨
 
 **세션 스토리지(Session Storage)**
 
 - 브라우저를 종료하면 데이터가 삭제됨
 - 세션이 유지되는 동안만 존재함
-- **`windows`** 전역 객체의 **`SessionStorage`** 컬렉션을 통해 저장 및 조회를 할 수 있음
+- `windows` 전역 객체의 `SessionStorage`컬렉션을 통해 저장 및 조회를 할 수 있음
 - 도메인이 같더라도 브라우저가 다르면 각각의 세션 스토리지가 형성되어 있기 때문에 데이터 공유가 되지 않음
 
 **쿠키와 웹 스토리지의 비교**
 
-|             | 쿠키                                | 웹 스토리지              |
-| ----------- | ----------------------------------- | ------------------------ |
-| 서버로 전송 | 서버 요청 마다 요청헤더에 실어 전송 | 클라이언트에 데이터 저장 |
-| 데이터 형태 | 문자열                              | 구조화 된 객체           |
-| 용량        | 총 300개                            |
+|             | 쿠키                                              | 웹 스토리지                                |
+| ----------- | ------------------------------------------------- | ------------------------------------------ |
+| 서버로 전송 | 서버 요청 마다 요청헤더에 실어 전송               | 클라이언트에 데이터 저장                   |
+| 데이터 형태 | 문자열                                            | 구조화 된 객체                             |
+| 용량        | 총 300개. 하나의 도메인당 20개. 하나의 쿠키당 4kb | 제한 X                                     |
+| 제거 시점   | 만료 일자를 강제로 지정해야 하므로 언젠간 삭제됨  | 한 번 저장한 데이터는 영구적으로 존재 가능 |
 
-하나의 도메인당 20개
-하나의 쿠키강 4kb | 제한 X |
-| 제거 시점 | 만료 일자를 강제로 지정해야 하므로 언젠간 삭제됨 | 한 번 저장한 데이터는 영구적으로 존재 가능 |
+<br/>
 
 ## 9. 성능
 
@@ -380,26 +410,90 @@
 - [Largest Contentful Paint (LCP)](https://web.dev/lcp/) : 로딩의 성능. 사용자에게 좋은 경험을 제공하기 위해서는, 적어도 2.5초 이내로 첫페이지 로딩이 이루어져야 한다.
 - [First Input Delay (FID)](https://web.dev/fid/) : 상호작용성. 좋은 사용자 환경을 제공하기 위해서는, 페이지의 FID가 100ms 미만이어야 한다.
 - [Cumulative Layout Shift(CLS)](https://web.dev/cls/) : 시각적 안정성. 좋은 사용자 환경을 제공하기 위해서는, 페이지가 0.1초 이하의 CLS를 유지해야 한다.
+- [Interaction to Next Paint(INP)](https://web.dev/articles/inp?hl=ko) : 사용자와의 상호작용 후 페이지의 반응속도. 사용자 경험을 향상시키기 위해서는, 상호작용 후 다음 화면 업데이트가 200ms 이내에 이루어져야 한다. 2024년 3월부터 FID를 대신하여 Core Web Vitals에 추가되었다.
 
-**Throttling vs Debounce**
+**Throttling와 Debounce**
 
-이벤트를 2가지 방식으로 제어해 성능을 높이는 방법
+`scroll`, `resize`, `input`, `mousemove` 등 짧은 시간내에 연속해서 발생하는 이벤트에 바인딩 된 이벤트 핸들러가 과도하게 호출되어 성능에 문제를 일으킬 때, 특정 방식으로 로직이 실행되는 횟수를 줄여 성능 최적화하는 2가지 기법
 
-|                  | Throttling                           | Debounce                                        |
-| ---------------- | ------------------------------------ | ----------------------------------------------- |
-| 정의             | 이벤트를 일정 주기마다 처리하는 방식 | 연속적으로 발생한 이벤트를 하나로 처리하는 방식 |
-| 이벤트 발생 시점 | 일정 간격을 설정                     | 입력이 끝날때까지 무                            |
-| 사용 예시        | 스크롤                               | 키워드 검색/자동완성기능, 컴포넌트 리사이징     |
+**Throttling**
+
+- 이벤드를 일정 주기마다 발생하도록 하는 기술
+- ex) 무한 스크롤
+
+**Throttling 코드**
+
+```jsx
+const $app = document.querySelector('#app');
+const $countNumber = document.querySelector('#count-number');
+let count = 0;
+
+const throttle = (func) => {
+  let timer;
+
+  return (e) => {
+    if (!timer) {
+      timer = setTimeout(() => {
+        timer = null;
+        func();
+      }, 1000);
+    }
+  };
+};
+
+const increaseCountNumber = () => {
+  $countNumber.innerText = count++;
+};
+
+$app.addEventListener('scroll', throttle(increaseCountNumber));
+```
+
+- 스크롤 시 throttle라는 클로저 함수가 타이머를 설정하고, 타이머가 없을 경우에만 콜백함수를 실행할 수 있도록 함. 한 번 실행된 이후 일정 시간이 지나기 전까지는 timer 가 설정되어 있기 때문에 추가 호출이 무시되며, 일정시간이 지나 타이머가 만료되면 다시 콜백 함수가 실행될 수 있도록 타이머를 초기화한다.
+
+**Debounce**
+
+- 연속적으로 발생한 이벤트를 하나로 처리하는 방식으로 주로 처음이나 마지막으로 실행된 함수를 처리하는 방식
+- ex) 키워드 검색, 자동완성기능, 컴포넌트 리사이징
+
+**Debounce 코드**
+
+```jsx
+const $input = document.querySelector("#input");
+const $app = document.querySelector("#app");
+
+const callAjaxRequest = () = > {
+	${app}.insertAdjacentHTML("beforeend", `<p>ajax 요청 : ${e.target.value}</p>`);
+}
+
+const debounce = (func) => {
+	let timer;
+
+	return (e) => {
+		if(timer) {
+			clearTimeout(timer);
+		}
+
+		  timer = setTimeout(() => {
+            func(e);
+        }, 500);
+	}
+}
+
+$input.addEventListener("input", debounce(callAjaxRequest));
+```
+
+- 자동 완성 기능을 구현할 때, `debounce`라는 함수를 클로저를 이용해서 구현한다. 사용자가 입력을 할 때마다 `ajax` 요청을 보내지 않고, 클로저 변수 `timer`가 일정 시간이 될 때까지 기다렸다가 콜백으로 전달받은 함수를 실행하여 이벤트함수를 호출하여 성능을 개선함
+- 리액트에서는 디바운스 함수를 `useCallback`으로 감싸서 메모이제이션 시켜준다.
 
 [**CSS 애니메이션 VS JS 애니메이션**](https://velog.io/@younghwanjoe/requestAnimationFrame%EC%9D%84-%EC%82%AC%EC%9A%A9%ED%95%98%EC%97%AC-%EC%95%A0%EB%8B%88%EB%A9%94%EC%9D%B4%EC%85%98-%EA%B5%AC%ED%98%84%ED%95%98%EA%B8%B0-%EC%83%81)
 
-|           | CSS 애니메이션                                            | JS 애니메이션                                                                                    |
-| --------- | --------------------------------------------------------- | ------------------------------------------------------------------------------------------------ |
-| 사용 범위 | 간단한 애니메이션                                         | CSS로 처리하기 복잡하고 무거운 애니메이션                                                        |
-| 사용 방법 | transform, translate, @keyframe사용                       | https://developer.mozilla.org/ko/docs/Web/API/window/requestAnimationFrame, 외부 라이브러리 사용 |
-| 특징      |                                                           | Animation Frame Queue 에서 처리됨                                                                |
-| 장점      | 가볍고 성능이 좋으며 쉽다. 외부라이브러리가 필요하지 않음 | 프레임을 정확히 제어할 수 있고, 복잡한 애니메이션과 상호작용이 쉬움                              |
-| 단점      | 제한적인 기능, 복잡한 애니메이션 구현 어려움              | CSS에 비해서 성능이나 효율성이 좋지 않다.                                                        |
+|           | CSS 애니메이션                                            | JS 애니메이션                                                       |
+| --------- | --------------------------------------------------------- | ------------------------------------------------------------------- |
+| 사용 범위 | 간단한 애니메이션                                         | CSS로 처리하기 복잡하고 무거운 애니메이션                           |
+| 사용 방법 | transform, translate, @keyframe사용                       | requestAnimationFrame, 외부 라이브러리 사용                         |
+| 특징      |                                                           | Animation Frame Queue 에서 처리됨                                   |
+| 장점      | 가볍고 성능이 좋으며 쉽다. 외부라이브러리가 필요하지 않음 | 프레임을 정확히 제어할 수 있고, 복잡한 애니메이션과 상호작용이 쉬움 |
+| 단점      | 제한적인 기능, 복잡한 애니메이션 구현 어려움              | CSS에 비해서 성능이나 효율성이 좋지 않다.                           |
 
 **이미지 스프라이트**
 
