--- a/10. Network.md
+++ b/10. Network.md
@@ -1,80 +1,126 @@
 ## 1. 프로토콜 - HTTP
 
-**프로토콜**
+**HTTP**
 
-서로 다른 시스템이나 기기간 데이터 교환을 원활하게 하기 위한 표준화 된 통신 규약
+- **H**yper**T**ext **T**ransfer **P**rotocol (하이퍼텍스트 전송 규약)
+- 웹에서 클라이언트와 서버처럼 서로 다른 시스템이나 기기간의 통신(데이터교환)을 위한 규약
+- 헤더와 페이로드로 이루어져 있음
+  - 헤더(Header) : HTTP 요청이나 응답에 대한 메타 데이터
+  - 페이로드(Payload) : 실제 데이터
 
-[**HTTP/HTTPS(Hyper Text Transfer Protocol SSL)**](https://velog.io/@reggias/%EA%B8%B0%EC%88%A0%EB%A9%B4%EC%A0%91HTTP-HTTPS)
+**HTTPS**
 
-- HTTP : 웹에서 데이터를 주고 받기 위한 프로토콜
-- HTTPS : HTTP에 SSL 프로토콜을 추가해 데이터를 암호화 하는 프로토콜
+- HTTP에 SSL 프로토콜을 추가해 데이터를 암호화 하는 프로토콜
+- **데이터 전송 전에 패킷을 암호화 →** 제3자가 가로챌 수 없도록 보안 강화(**S**ecure)
+
+**HTTP/HTTPS 특징**
+
+- 비연결성(**`Connectionless`**) : client가 server에 요청을 보내고 서버가 응답하면 TCP/IP 연결 끊음 ⇒ 접속을 종료한다.
+- 무상태성(**`Stateless`**) : 통신이 끝나면 server가 client의 이전 상태를 유지하지 않는다.
+- **비교**
+  | | HTTP | HTTPS |
+  | ----------------------- | --------------------------- | ---------------------------------- |
+  | 의미 | Hypertext Transfer Protocol | Hypertext Transfer Protocol Secure |
+  | 기본 프로토콜 | - HTTP/1 및 HTTP/2: TCP/IP |
+  | - HTTP/3: QUIC 프로토콜 | HTTP/2 + SSL/TLS |
+  | 포트 | 기본 포트 80 | 기본 포트 443 |
+  | 보안 | x | 퍼블릭 키 암호화에 SSL 인증서 사용 |
+  | 이점 | 인터넷을 통한 통신 지원 | 신뢰성, SEO 개선 |
+
+**SSL/TLS 인증서란?**
+
+- SSL/TLS 프로토콜을 사용해 **암호화된 네트워크 연결을 설정할 수 있게** 함. 즉 연결이 설정된 client-server만 전송한 데이터를 볼 수 있음
+- **네트워크 암호화 설정 과정**
+  - 유저가 SSL/TLS 보안 웹 사이트(=https)에 접속
+  - 브라우저가 서버의 진위 여부 확인을 위해 식별 가능한 정보를 요청
+  - 서버가 암호화에 필요한 `퍼블릭 키`를 SSL/TLS 인증서에 담아 회신
+  - 브라우저는 SSL/TLS 인증서가 유효한지 확인 (ex. 도메인 일치 여부, 만료 여부 등)
+  - 유효하면 `퍼블릭 키`를 사용해 `비밀 세션 키`를 포함해 데이터를 암호화하여 전송
+  - 서버는 브라우저가 보낸 데이터를 `프라이빗 키`로 복호화하고 세션 키를 꺼냄
+  - 서버는 `세션 키`를 사용해 암호화하고 브라우저에 승인 메시지를 보냄
+  - 브라우저-서버가 동일한 `세션 키`를 사용하여 안전하게 통신
+    <aside>
+    💡 퍼블릭 키로 암호화한 파일은 프라이빗 키로만 복호화할 수 있고, 그 반대의 경우도 마찬가지이다. 해당 파일을 복호화할 수 있다는 것은, 수신자/발신자를 신뢰할 수 있음을 나타낸다.
+
+    </aside>
+
+    <aside>
+    💡 세션 키는 초기 SSL/TLS 인증이 완료된 후, 브라우저와 서버 간 암호화된 통신을 유지한다. 세션 키는 암호화와 복호화에 동일한 키를 사용하는 대칭 암호화를 위한 키이다.
+    비대칭 암호화(ex. 퍼블릭 키 암호화-프라이빗 키 복호화)는 계산 비용이 엄청나기 때문에, 인증이 완료된 이후부터는 계산이 덜 필요한 대칭 암호화로 전환하는 것이다.
+
+    </aside>
 
 [**HTTP 버전별 특징**](https://zu-techlog.tistory.com/113)
 
-- HTTP 1.0 : 하나의 연결당 하나의 요청 처리
-- HTTP 1.1 : keep-alive 옵션을 추가해 하나의 연결당 여러번의 송수신 가능
-- HTTP 2 : 여러 리소스를 한번에 요청 가능
-- HTTP 3 : UDP 기반의 프로토콜로 사용
+| **버전** | **특징**                                               |
+| -------- | ------------------------------------------------------ |
+| HTTP 1.0 | - 최초 표준 버전으로, 가장 기초적인 전송 형식이 확립됨 |
+
+- 하나의 연결당 하나의 요청만 처리 가능
+- 연결이 요청 완료 후 즉시 닫힘 (비효율성) |
+  | HTTP/1.1 | - Keep-Alive 옵션 도입: 하나의 연결에서 여러 요청/응답 가능
+- Chunked Transfer Encoding 지원: 대용량 데이터를 나눠서 전송 가능
+- 연결 지속성이 향상됨 |
+  | HTTP/2 | - 전송 데이터 형식변경 : 텍스트 → 바이너리
+- 다중화 프로토콜 도입: 동일한 연결에서 병렬 요청 수행 가능
+- 헤더 압축: 요청/응답 헤더를 압축하여 오버헤드를 줄임
+- 서버 푸시: 서버가 클라이언트의 요청 없이도 리소스를 미리 전송 가능 |
+  | HTTP/3 | - 전송 계층 변경: TCP/IP → QUIC(UDP기반)
+- 업그레이드된 다중화 프로토콜: QUIC은 UDP를 통해 여러 스트림을 독립적으로 실행 ⇒ 오류 발생 시 해당 스트림만 차단 (HTTP/2의 다중화 프로토콜은 모든 스트림이 차단됨) |
 
 **HTTP Status Code**
 
 클라이언트가 보낸 특정 HTTP 요청에 대한 서버의 응답 코드 상태 코드에 따라 요청의 성공이나 실패 여부 판단
 
-- **1xx(정보제공) :** 클라이언트의 요청을 받았으며 프로세스를 계속 진행함
-- **2xx(성공) :** 클라이언트가 요청한 동작을 수신/이해/승낙하여 성공적으로 처리함
-  - 200 : 요청을 성공적으로 처리함
-  - 201 : 요청이 처리되어서 새로운 리소스 생성
-  - 202 : 요청은 접수했지만, 처리가 완료되지 않음
-- **3xx(리다이렉션) :** 클라이언트는 요청 완료를 위해 추가 작업을 해야함
-  - 301 : 지정할 리소스가 새로운 URI로 이동함
-  - 303 : 다른 위치로 요청
-  - 307 : 임시 리다이렉션 필요
-- **4xx(클라이언트 에러) :** 클라이언트 요청에 오류가 있음
-  - 400 : 요청 구문 에러
-  - 401 : 지정한 리소스에 대한 액세스 권한 X
-  - 403 : 지정한 리소스에 대한 엑세스 금지
-  - 404 : 지정한 리소스를 찾을 수 없음
-- **5xx(서버 에러) :** 클라이언트의 요청은 유효하나 서버가 처리 실패함
-  - 500 : 서버 내부 에러 발생
-  - 501 : 요청한 URI의 메소드에 대해 서버가 구현하고 있지 않음
-  - 502 : 게이트웨이 또는 프록시 역할을 하는 서버가 그 뒷단의 서버로부터 잘못된 응답을 받았다.
+| **상태코드** | **의미**        | **해석**                                            |
+| ------------ | --------------- | --------------------------------------------------- |
+| **1xx**      | 정보제공        | 클라이언트의 요청을 받았으며 프로세스를 계속 진행함 |
+| **2xx**      | 성공            | 클라이언트의 요청이 성공적으로 처리됨               |
+| **3xx**      | 리다이렉션      | 클라이언트는 요청 완료를 위해 추가 작업을 해야 함   |
+| **4xx**      | 클라이언트 에러 | 클라이언트의 요청에 오류가 있음                     |
+| **5xx**      | 서버 에러       | 서버가 요청을 처리하는 데 실패함                    |
 
-**HTTP 헤더 / HTTTP 페이로드**
-
-- 헤더(Header) : HTTP 요청이나 응답에 대한 메타 데이터
-- 페이로드(Payload) : 실제 데이터
-
-<br/ >
+<br/>
 
 ## 2. RESTful API
 
-**API(Application Programming Interface )**
+**API(Application Programming Interface)**
 
 응용 프로그램에서 데이터를 주고 받기 위한 인터페이스로 어떠한 사이트에서 데이터를 공유할 경우 어떤 방식으로 정보를 요청해야 되는지, 어떠한 형태로 데이터를 제공받게 되는지에 대한 규격
 
 **REST(Representational State Transfer)**
 
-자원을 이름으로 구분하여 자원의 상태(정보)를 주고 받는 것
+자원을 기반으로 클라이언트와 서버의 상호작용을 정의하는 아키텍처
 
 **REST의 구성요소**
 
-- **자원(RESOURCE)** : HTTP URI
-- **행위(Verb)** : HTTP METHOD
-  - **GET** : 조회
-  - **POST** : 리소스 생성
-  - **PUT** : 리소스 전체 교체
-  - **PATCH** : 리소스의 일부 수정
-  - **DELETE** : 리소스 삭제
-- **표현(Representations)** : HTTP Message Pay Load
+- **자원(RESOURCE)**
+  - REST 아키텍처에서 다루는 객체나 데이터
+  - 고유한 식별자(HTTP URI)로 구별된다.
+- **행위(Verb)**
+  - 클라이언트가 자원에 대해 어떤 작업을 수행할 지 결정하는 HTTP 메서드
+  - 종류
+    | **메서드** | **설명** | **멱등성** | **특징** |
+    | --------------------------------------------- | --------------------------------------- | ---------- | ----------------------------------------------------------------------------------------- |
+    | **`GET`** | 자원 조회 | O | - 요청 본문 없음. |
+    | - 쿼리 문자열을 통해 데이터를 전달할 수 있음. |
+    | **`POST`** | 새로운 자원 생성 | X | - 요청 본문에 데이터를 포함하여 전달 |
+    | **`PUT`** | 자원 업데이트(전체 수정) | O | - 요청 본문에 업데이트할 데이터를 포함하여 전달 |
+    | **`DELETE`** | 자원 삭제 | O | - 요청 본문에 삭제할 데이터를 포함할 수 있지만, 일반적으로는 쿼리 문자열에 데이터 전달 |
+    | **`PATCH`** | 자원의 일부 수정(부분 수정) | X | - 요청 본문에 수정할 데이터를 포함하여 전달 |
+    | **`HEAD`** | 자원에 접근할 수 있는지 확인 | O | - 자원에 대한 메타데이터를 가져올 때 사용 |
+    | **`OPTIONS`** | 서버가 지원하는 메서즈를 확인할 때 사용 | O | - CORS 요청에서 주로 사용되며, 클라이언트와 서버간의 상호 작용 규칙을 미리 확인할 때 유용 |
+    | **`TRACE`** | 서버로 보낸 요청을 다시 받아서 확인 | O | - 디버깅 용도로 사용 |
+    | **`CONNECT`** | 목적지 서버로의 터널을 설정 | X | - 프록시를 통해 암호화된 연결을 설정할 때 사용 |
+    | - 클라이언트와 서버간의 보안 연결 설정시 사용 |
+- **표현(Representations)**
+  - 클라언트와 서버간에 자원이 전달되는 방식
+  - 자원자체는 서버에 저장되어 있지만 클라이언트는 자원에 직접접근하는 것이 아닌 자원의 표현으로 전달받는다.
+  - HTTP Message Pay Load
 
 **REST API(Representational State Transfer)**
 
 - REST 아키텍쳐를 따르는 API
-
-**RESTful API 설계 가이드**
-
-1. URI 는 정보의 자원을 표현해야 한다.
-2. 자원에 대한 행위는 HTTP Method로 표현한다.
 
 <br />
 
