--- a/10. Network.md
+++ b/10. Network.md
@@ -21,8 +21,7 @@
   | | HTTP | HTTPS |
   | ----------------------- | --------------------------- | ---------------------------------- |
   | 의미 | Hypertext Transfer Protocol | Hypertext Transfer Protocol Secure |
-  | 기본 프로토콜 | - HTTP/1 및 HTTP/2: TCP/IP |
-  | - HTTP/3: QUIC 프로토콜 | HTTP/2 + SSL/TLS |
+  | 기본 프로토콜 | HTTP/1 및 HTTP/2: TCP/IP | HTTP/3: QUIC 프로토콜 | HTTP/2 + SSL/TLS |
   | 포트 | 기본 포트 80 | 기본 포트 443 |
   | 보안 | x | 퍼블릭 키 암호화에 SSL 인증서 사용 |
   | 이점 | 인터넷을 통한 통신 지원 | 신뢰성, SEO 개선 |
@@ -31,6 +30,7 @@
 
 - SSL/TLS 프로토콜을 사용해 **암호화된 네트워크 연결을 설정할 수 있게** 함. 즉 연결이 설정된 client-server만 전송한 데이터를 볼 수 있음
 - **네트워크 암호화 설정 과정**
+
   - 유저가 SSL/TLS 보안 웹 사이트(=https)에 접속
   - 브라우저가 서버의 진위 여부 확인을 위해 식별 가능한 정보를 요청
   - 서버가 암호화에 필요한 `퍼블릭 키`를 SSL/TLS 인증서에 담아 회신
@@ -102,8 +102,7 @@
   - 종류
     | **메서드** | **설명** | **멱등성** | **특징** |
     | --------------------------------------------- | --------------------------------------- | ---------- | ----------------------------------------------------------------------------------------- |
-    | **`GET`** | 자원 조회 | O | - 요청 본문 없음. |
-    | - 쿼리 문자열을 통해 데이터를 전달할 수 있음. |
+    | **`GET`** | 자원 조회 | O | - 요청 본문 없음. | - 쿼리 문자열을 통해 데이터를 전달할 수 있음. |
     | **`POST`** | 새로운 자원 생성 | X | - 요청 본문에 데이터를 포함하여 전달 |
     | **`PUT`** | 자원 업데이트(전체 수정) | O | - 요청 본문에 업데이트할 데이터를 포함하여 전달 |
     | **`DELETE`** | 자원 삭제 | O | - 요청 본문에 삭제할 데이터를 포함할 수 있지만, 일반적으로는 쿼리 문자열에 데이터 전달 |
@@ -128,40 +127,55 @@
 
 **프록시/프록시서버**
 
-서버와 클라이언트 사이에서 대리로 통신을 수행해 주는 것으로 중계 역할을 해주는 서버를 프록시 서버라고 한다.
+- 서버와 클라이언트 사이에서 대리로 통신을 수행해 주는 것으로 중계 역할을 해주는 서버를 프록시 서버라고 한다.
+- 종류
+  ![alt text](img/proxy.png)
+  **포워드 프록시**
+  - 클라이언트 앞에 높여 사용자의 요청을 받아 서버에게 전달해주는 프록시
+  - 서버는 어떤 사용자와 통신하는지 알 수 없고, 프록시와 통신하게 됨.
+  - 캐싱된 데이터가 존재한다면 중간에서 빠르게 클라이언트에게 응답 해줌
+    **리버스 프록시**
+  - 서버의 앞에 놓여 사용자의 클라이언트의 요청을 받아 서버에게 전달해주는 프록시
+  - 클라이언트는 어떤 서버와 통신하는지 알 수 없고, 프록시와 통신하게 됨.
 
-**포워드 프록시**
+**프록시 서버 사용 이유**
 
-- 클라이언트의 요청을 받아 서버에 전달해주는 프록시
-- 캐싱된 데이터가 존재한다면 중간에서 빠르게 클라이언트에게 응답 해줌
+- **보안 강화**
+  - 사용자 또는 실제 서버의 IP를 숨겨 공격을 피함
+- **캐시 사용**
+  - 프록시 서버에 자주 사용한 데이터를 저장해 속도를 향상
+- **로드 밸런싱**
+  - 본 서버 앞에 리버스 프록시를 두어 대량의 트래픽이 와도 부하되지 않게 함
+- **로그 관리**
+  - 프록시 서버에 사용자 요청 기록이 남음
+  - 어떤 IP가 어떤 IP로 얼마나 접속했는지 확인
+- **접속 우회**
+  - 지역 IP가 차단된 경우, 프록시 서버를 사용해 다른 곳에서 접속한 것처럼 우회 가능
 
-**리버스 프록시**
-
-- 클라이언트에게 받은 요청을 보고 알맞은 서버에게 요청을 처리하고록 데이터를 넘겨주는 프록시
-
-<br />
-
-## 4. DNS
+## 2. DNS
 
 **IP 주소**
 
-네트워크 상에서 인터넷에 연결된 컴퓨터들이서로를 인식하기 위해 지정받은 식별용 번호
+네트워크 상에서 인터넷에 연결된 컴퓨터들이 서로를 인식하기 위해 지정받은 식별용 번호
 
 **도메인(Domain)**
 
 IP 주소를 식별하는 문자열
 
-**DNS(Domain Name Server)**
+**DNS(Domain Name System)**
 
-도메인과 IP 주소를 한 쌍으로 저장하고 있는 서버
+- 도메인과 IP 주소로 변환하는 분산 계층시스템
+  - **분산**: DNS 서버는 1개가 아니라 여러 개이며 세부적인 역할이 다름
+  - **계층**: 여러 DNS는 계층 구조를 이룸 (Root→TLD→SLD)
+- DNS는 프로토콜이며, DB 이 모든것을 포함하는 시스템이다.
 
 **URI/URL/URN**
 
-![alt text](/img/image.png)
+![alt text](img/url.png)
 
-- URI : 인터넷 자원을 식별할 수 있는 문자열
-- URL : 리소스를 어떻게 얻을것이고 어디에서 가져와야 하는지 명시하는 URI
-- URN : 리소스 경로
+- `URI` : 인터넷 자원을 식별할 수 있는 문자열
+- `URL` : 리소스를 어떻게 얻을것이고 어디에서 가져와야 하는지 명시하는 URI
+- `URN` : 리소스 경로
 
 [**주소창에 URL을 검색했을 때 일어나는 일?**](https://github.com/FEDeepDive/Front-end/blob/devkyoung2/9.%20WebBrowser.md)
 
@@ -176,3 +190,40 @@ IP 주소를 식별하는 문자열
 4. 전달받은 IP 주소를 이용해 웹 브라우저는 웹 서버에게 해당 웹 사이트에 맞는 HTML 문서 요청(HTTP 프로토콜 사용)
 
    2-1. 이때, 웹서버는 정적인 데이터를 클라이언트로 바로 돌려줄 수 있으나, 동적인 데이터는 was로 요청함
+
+### DNS 구성
+
+- **DNS Resolver**
+  - 사용자와 DNS 네임서버 간 요청/응답 중개 서버
+  - 쿼리 방식(아래 참조)에 따라 네임서버에 쿼리를 보내고, 획득한 IP 주소를 사용자에 응답함
+  - 획득한 IP 주소를 캐시함
+- **Root Name Server**
+  - 모든 DNS 조회가 시작되는 DNS 최상단 계층 서버
+  - 도메인을 해석해 TLD 서버 정보를 반환함
+- **TLD(Top-Level Domain) Name Server**
+  - 도메인 이름을 가지고 SLD 서버 정보를 반환함
+- **SLD(Second-Level Domain) Name Server**
+  - `도메인`과 `IP 주소`의 맵핑 관계를 저장하고 있는 서버
+  - 도메인에 대한 IP 주소를 반환함
+  - 하위 도메인 이름이 있으면(ex. `sub.example.com`) 추가적인 SLD 서버 정보를 반환함
+  - 최종 결정 권한이 있어, **“Authoritative Server”** 라고도 불림
+
+### 동작 방식
+
+- **Iterative Query**: IP 주소를 얻을 때까지 Root, TLD, SLD 네임서버에 순차적으로 쿼리를 보냄
+  ![alt text](img/dns1.png)
+  1. 사용자가 주소창에 `example.com`을 입력 → 요청이 인터넷으로 이동해 DNS Resolver가 이를 수신
+  2. **DNS Resolver**가 **Root Server**에 쿼리
+  3. **Root Server**가 `com`을 관리하는 **TLD Server** 정보를 반환
+  4. **DNS Resolver**가 `com` **TLD Server**에 쿼리
+  5. **TLD Server**가 `example.com`을 관리하는 **SLD Server** 정보를 반환
+  6. **DNS Resolver**가 `example.com` **SLD Server**에 쿼리
+  7. **SLD Server**가 `example.com`의 IP 주소를 반환
+  8. **DNS Resolver**가 해당 IP 주소를 브라우저에게 응답 (+ IP 주소 캐싱)
+- **Recursive Query**: DNS 네임서버 간 재귀적으로 쿼리를 보냄
+  ![alt text](img/dns2.png)
+    <aside>
+    💡 성능 측면에서는 Iterative Query보다 빠르지만, **보안에 취약** 하여 권장되지 않는다.
+    가령 중간에 위치한 DNS 서버가 악성 코드나 위조된 DNS 서버 정보를 제공한다거나, 제3자가 사용자의 트래픽을 가로채고 조작할 수 있다.
+    
+    </aside>
