[ JavaScript ] : 17회차 스터디 2차 답변

--- a/9. WebBrowser.md
+++ b/9. WebBrowser.md
@@ -74,17 +74,37 @@
 
 ## 4. CORS 정의 및 목적
 
-- **개념**
-  - 교차 출처 리소스 공유, Cross-Origin Resource Sharing
-  - 즉 "\*출처가 다른(교차하는) 서버 간 리소스 공유"를 의미함
-  - \*출처(origin) 구성 요소: `프로토콜/도메인/포트`
-- **목적**
-  - CORS 허용이란, 출처가 서로 달라도 리소스 요청/응답을 허용할 수 있게 함을 의미
-- **CORS 에러 해결**
-  - 서버에서 응답 헤더 세팅
-  - 프록시 서버 사용
-    - `http://example.com`에서 `http://api.example.com`로 요청 시, `http://example-proxy.com`라는 프록시 서버에 요청을 보냄
-    - 프록시 서버가 `http://api.example.com`으로 요청을 전달하고, 응답을 다시 웹 애플리케이션에 반환
+### **SOP(Same Origin Policy, 동일 출처 정책)**
+
+- 출처가 동일해야 리소스를 공유할 수 있도록 하는 웹 보안 정책
+
+### **출처(Origin)란?**
+
+- `프로토콜, 호스트, 포트`가 같으면 두 URL은 동일한 출처를 가짐
+- ex) URL: http://store.company.com/dir/page.html
+    - 출처: http://store.company.com
+    - 프로토콜: http
+    - 호스트: store.company.com
+    - 포트: 80 (http: 80, https: 443이 기본)
+
+### **CORS(Cross-Origin Resource Sharing, 교차 출처 리소스 공유)**
+
+- **정의 및 목적**
+    - 출처가 다른 서버 간 리소스 공유를 허용하는 **HTTP 요청 매커니즘**
+    - SOP를 우회하여 다른 출처의 리소스에 안전하게 접근하게 해줌
+    - 동일 출처 간에도 특정 조건에 따라 CORS 오류가 발생할 수 있음!
+        - http/https 혼합, 자격 증명(쿠키, 인증 헤더 등)을 포함한 요청 등
+- **허용 방법**
+    - 서버에 요청 시, 요청 헤더의 **`Origin` 필드에 자신의 출처를 포함**
+    - 서버는 응답 시, 응답 헤더의 **`Access-Control-Allow-Origin` 필드에 허용할 출처를 포함**
+    - 요청을 보내는 출처가 서버에서 허용한 출처 목록에 포함되어 있다면 리소스 접근 가능
+- **에러 해결 방법**
+    - 응답 헤더 설정
+        - 서버가 클라이언트의 출처를 응답 헤더 `Access-Control-Allow-Origin` 필드에 포함
+    - 프록시 서버 사용
+        - 요청을 클라이언트 → 프록시 서버 → 원본 서버
+    - WebSocket 사용
+        - CORS는 HTTP 요청에 적용되는 매커니즘이므로, WebSocket을 사용해 우회 가능
 
 ## 5. 웹 접근성을 높이기 위한 방법은 어떤 것들이 있을까요?
 
@@ -238,5 +258,93 @@
 - 이벤트 위임은 이벤트 버블링에 의한 이벤트 전파를 이용한 디자인 패턴임
 
 ## 8. 쿠키/세션/토큰
+
+### 등장 배경
+
+- HTTP의 특징 ([프로토콜 (HTTP/HTTPS)](https://www.notion.so/HTTP-HTTPS-e7653e56b32e48fd9c7080e75230aa88?pvs=21))
+    - 비연결성(connectionelss): 클라이언트가 서버의 응답을 받으면 TCP/IP 연결이 종료됨
+    - 무상태성(stateless): 서버가 클라이언트의 이전 상태를 보존하지 않음
+- 따라서 서버가 클라이언트의 정보를 유지하지 못함
+    - 페이지 이동마다 로그인 정보, 사용자 입력 정보 등이 초기화됨
+- 해결 방법으로, `쿠키/세션/토큰`으로 클라이언트 측 정보를 저장하고 이를 요청에 포함함
+
+|  | **쿠키** | **세션** | **토큰** |
+| --- | --- | --- | --- |
+| **저장 위치** | 클라이언트(브라우저) | 서버 | 클라이언트(주로 웹스토리지) |
+| **만료 시점** | - 지속쿠키: 만료 시간 경과<br/>- 세션쿠키: 브라우저 종료 | - 세션 타임아웃<br/>- 만료 시간 경과<br/>- 브라우저 종료 | 설정 가능 |
+| **보안** | 낮음 | 높음 | 높음 (토큰 암호화, 검증 등 절차) |
+| **서버 부하** | X | O | X |
+
+### 쿠키
+
+- **개념**
+    - 서버가 클라이언트에 보내는 작은 데이터 조각
+    - 브라우저에 저장했다가, 동일한 서버에 요청을 보낼 때 헤더에 자동으로 포함됨
+    - 서버가 두 요청이 동일한 브라우저에서 들어왔는지 판단하기 위해 사용
+    - 이름/만료일/도메인 등 속성을 포함함
+- **특징**
+    - 1️⃣낮은 보안
+        - 브라우저에서 JS로 쿠키 생성/접근 가능 ⇒ XSS에 취약
+        - 쿠키에 민감 정보 포함 시 위험
+    - 2️⃣요청 오버헤드
+        - 매 요청마다 쿠키를 포함해야 함
+        - 쿠키가 많을수록 요청 메시지 크기가 커짐
+    - 3️⃣개수 제한
+    - 4️⃣브라우저 간 비공유
+        - 브라우저마다 쿠키 지원 형태가 달라 브라우저 간 공유가 불가능
+- **용도**
+    - 개인화 (ex. 팝업 보지 않기, 사용자 선호, 테마 등의 세팅)
+    - 트래킹 (ex. 사용자 행동을 기록하고 분석하는 용도)
+- **쿠키 관련 HTTP 헤더 필드 및 속성**
+    - 서버 응답 시 `Set-Cookie` 필드로 쿠키 생성
+        - `Secure` 속성: HTTPS 요청에 대해서만 쿠키를 전송함
+        - `HttpOnly` 속성: 브라우저에서 JS로 `document.coockie`에 접근할 수 없게 함
+        
+        ```
+        HTTP/1.0 200 OK
+        Content-type: text/html
+        Set-Cookie: yummy_cookie=choco
+        Set-Cookie: tasty_cookie=strawberry; Expires=Wed, 21 Oct 2015 07:28:00 GMT; Secure; HttpOnly
+        
+        [page content]
+        ```
+        
+    - 클라이언트 요청 시 브라우저가 자동으로 `Cookie` 필드에 쿠키 포함하여 전송
+        - 쿠키에 여러 속성이 있어도, `Cookie`에는 쿠키 이름-값만 포함함
+        
+        ```
+        GET /sample_page.html HTTP/1.1
+        Host: www.example.org
+        Cookie: yummy_cookie=choco; tasty_cookie=strawberry
+        ```
+        
+- **만료 시점에 따른 종류**
+    - 지속 쿠키: 만료 기간(`Expires`, `Max-Age` 속성)을 명시해, 그동안 저장됨
+    - 세션 쿠키: 만료 기간을 명시하지 않아, 세션이 유효한 동안 저장됨 (프로세스 종료 시 삭제)
+
+### 세션
+
+- **개념**
+    - 서버에 클라이언트 상태를 관리하는 시스템
+    - 서버에서 클라이언트 별 상태를 추적할 수 있음
+    - 종료 시점
+        - 세션 타임아웃 (사용자가 일정 시간 활동하지 않는 경우)
+        - 세션 혹은 세션 쿠키 만료 기간 경과
+        - 사용자 로그아웃, 브라우저 종료 등
+    - 세션 저장소: 메모리, 파일 시스템, 데이터베이스 등
+- **동작 과정**
+    - 최초 요청 시, 서버는 세션 생성
+    - ⇒ 서버 응답 시, 세션 ID 발급해 쿠키로 전달 (세션 쿠키)
+    - ⇒ 후속 요청 시, 세션 ID를 포함
+    - ⇒ 브라우저 종료 or 만료 시, 세션과 세션 ID 삭제
+- **특징**
+    - 1️⃣높은 보안
+        - 서버에서 상태를 관리함
+        - 쿠키가 노출돼도 세션 ID에는 민감 정보가 없음
+        - but 세션 ID 탈취해 클라이언트로 위장 가능
+    - 2️⃣서버 부하
+        - 사용자(세션)가 많을수록 부하가 커짐
+- **용도**
+    - 세션 관리: (ex. 로그인 상태 유지, 장바구니)
 
 ## 9. 성능
